# methodsum

./: .gitattributes  .gitignore  README.md
java/: build.gradle  settings.gradle
java/src/main/java/gq/malwarefight/methodhash/: Main.java  MethodSum.java  RollingHash.java  WagnerFisher.java
java/src/modulus/cpp/: modulus.cpp  modulus.h
js/methodsum_wasm/: Cargo.toml
js/pkg/: index.html  methodsum4rust.d.ts  methodsum4rust.js  methodsum4rust_bg.wasm  methodsum4rust_bg.wasm.d.ts  package.json
js/src/: lib.rs
