[package]
name = "methodsum4rust"
version = "0.1.0"
edition = "2021"
authors = ["PandaNinjas <admin@malwarefight.gq>"]
description = "MethodSum rust implementation, used to implement js implementation through wasm"
license = "MIT"
repository = "https://github.com/thefightagainstmalware/MethodSum"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2"
